hphp/test/zend/bad/Zend/tests/bug50005.php
<?php

class a extends exception {
	public function __construct() {
		$this->file = null;
	}
}

throw new a;

?>